2008-10-30  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

		* configure.ac
		Fixed [ 2192030 ] adapt to autoconf 2.63, automake 1.10
			(patch from Klaus Kämpf)

2008-10-07  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

		* configure.ac autoconfiscate.sh
		Fixed  2086429 RPATH missing from sfcbmof[pp]

2008-04-16  Sean Swehla

		* configure.ac:
		Fixed problem related to 1828500: CMPI 2.0 Support.

2007-08-28  Sven Schuetz

		* backend_sfcb.c:
		Fixed 1685254: sfcb does not return REFERENCECLASS in GetClass

2007-08-01  Sven Schuetz

        * backend_sfcb.c:
        Fixed 1763178: GetClass operation failure

2007-06-22  Tyrel Datwyler <tyreld@us.ibm.com>

	* mofs.l:
	Fixed 1741211 cleanup compiler warnings

2007-05-03  Chris Abbey

	* configure.ac:
	Fixed 1709042: added dependency to sfcUtil

2007-03-23  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* configure.ac: 
	Addition for 1686170: instance comparison not supported.
	Needed to adjust the include path for the sfcb backend case.

2007-03-20  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* hash.h: 
	Fixed 1683860: Error compiling CIM v2.14Experimental
	The symbol hashtable was too small for 2.14e, has been increased
	by factor 4.

2007-02-22  Sven Schuetz

	* backend_sfcb.c:
	Adopted change in sfcb function name (normalizeObjectpath)

2007-01-04  Sven Schuetz

	* backend_sfcb.c:
	Fixed 1624528: sfcb getclass doesn't return methods

2007-01-04  Sven Schuetz

	* backend_sfcb.c, symtab.c:
	Fixed 1616463: mofc doesn't process REF type properties

2007-01-03  Sven Schuetz

	* backend_sfcb.c:
	Partially fixed 1624528: sfcb getclass doesn't return methods

2006-12-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* backend_sfcb.c, configure.ac, symtab.c: 
	Combined fix for 1601274, 1614898: new option --enable-namespace-kludge
	for the support of legacy __namespace class compilation.

2006-12-15  Sven Schuetz

	* backend_sfcb.c, symtab.c: