@@ -1,3 +1,9 @@
+2008-11-07  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+		* mofparse.c mofs.l:
+		Fixed [ 2168840 ] Fix various compiler warnings. 
+			(patch from J. Bart Whitely)
+
 2008-10-30  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 		* configure.ac
